[package]
name = "bundle"
version = "0.1.0"
authors = ["Kromsten <kromsten@megarock.app>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[dependencies]
# cosmwasm-schema = "2.2.0"
cosmwasm-std = { version = "3.0.2", features = [
  "cosmwasm_1_4",
  # Enable this if you only deploy to chains that have CosmWasm 2.0 or higher
  # "cosmwasm_2_0",
  # Or this if you only deploy to chains that have CosmWasm 2.1 or higher
  # "cosmwasm_2_1",
] }
cw2 = "3.0.0"
cw-storage-plus = "3.0.1"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.16", default-features = false }